# reachy-hermes-agent

./: .gitignore  .jscpd.json  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE-MIT  README.md  SECURITY.md  pyproject.toml  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/reachy_agent/: playback_queue.py  tts_chunk_queue.py
src/reachy_agent/body/: movement_policy.py
src/reachy_agent/local_s2s/: agent_adapter.py  qwen_output.py  runtime_smoke.py
src/reachy_agent/runtime/: __init__.py
src/reachy_agent/runtime/adapters/: hermes_agent.py
src/reachy_agent/runtime/core/: __init__.py  body.py
src/reachy_agent/voice/: NOTICE.md  astromech.py  echo_canceller.py  lexicon.py  nemotron_stream.py  semantic_gate.py  streaming_handler.py  stt_engine.py  stt_frontend.py  vad_capture.py
tests/: test_astromech.py  test_docs.py  test_lexicon.py  test_nemotron_stream.py  test_playback_queue.py  test_queue_resilience.py  test_semantic_gate.py  test_tts_pcm_stream.py  test_vision_context.py
tests/body/: test_movement_policy.py  test_safe_movement.py  test_vision.py  test_vlm_client.py
tests/community_runtime/: test_body_action_schema.py  test_core_boundaries.py  test_hermes_agent_body_controller.py  test_mock_body_controller.py  test_reachy_daemon_body_controller.py  test_safe_movement_policy.py
tests/config/: test_presets.py
tests/local_s2s/: test_agent_adapter.py  test_endpointing.py  test_events.py  test_qwen_output.py  test_runtime_smoke.py  test_stt_source.py
